--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "devDependencies": {
-    "@fitbit/sdk-cli": "^1.7.3",
-    "@fitbit/sdk": "^4.1.0"
+    "@fitbit/sdk": "~4.2.0"
   },
   "fitbit": {
-    "appUUID": "eeefe48c-6273-4ff8-8e23-07968ac5b5d1",
+    "appUUID": "d442848d-4cf2-4480-8602-2dbf2baa3b3e",
     "appType": "clockface",
     "appDisplayName": "Anime Watchface",
     "iconFile": "resources/icon.png",
@@ -21,8 +20,5 @@
       }
     },
     "defaultLanguage": "en-US"
-  },
-  "scripts": {
-    "build": "fitbit-build"
   }
 }
